--- a/service/templates/map.html
+++ b/service/templates/map.html
@@ -5,7 +5,7 @@
 <!-- head -->
 <head>
     <meta charset="utf-8">
-    <title>다각형에 이벤트 등록하기2</title>
+    <title>GETMAP</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <style>
         .area {
@@ -64,67 +64,75 @@
         // 자치구를 선택하면 해당 행정구역의 경계선 gps를 받아서
         // 지도상에 구역을 표현한다
         $('#gu').on('change',()=>{
-            alert($('#gu').val())
+            // alert($('#gu').val())
+            getArea($('#gu').val())
         })
-        /*
-            var areas = []
-            // 지도에 영역데이터를 폴리곤으로 표시합니다 
-            for (var i = 0, len = areas.length; i < len; i++) {
-                displayArea(areas[i]);
-            }
 
-            // 다각형을 생상하고 이벤트를 등록하는 함수입니다
-            function displayArea(area) {
-
-            // 다각형을 생성합니다 
-            var polygon = new kakao.maps.Polygon({
-                map: map, // 다각형을 표시할 지도 객체
-                path: area.path,
-                strokeWeight: 2,
-                strokeColor: '#004c80',
-                strokeOpacity: 0.8,
-                fillColor: '#fff',
-                fillOpacity: 0.7
-            });
-
-            // 다각형에 mouseover 이벤트를 등록하고 이벤트가 발생하면 폴리곤의 채움색을 변경합니다 
-            // 지역명을 표시하는 커스텀오버레이를 지도위에 표시합니다
-            kakao.maps.event.addListener(polygon, 'mouseover', function (mouseEvent) {
-                polygon.setOptions({ fillColor: '#09f' });
-
-                customOverlay.setContent('<div class="area">' + area.name + '</div>');
-
-                customOverlay.setPosition(mouseEvent.latLng);
-                customOverlay.setMap(map);
-            });
-
-            // 다각형에 mousemove 이벤트를 등록하고 이벤트가 발생하면 커스텀 오버레이의 위치를 변경합니다 
-            kakao.maps.event.addListener(polygon, 'mousemove', function (mouseEvent) {
-
-                customOverlay.setPosition(mouseEvent.latLng);
-            });
-
-            // 다각형에 mouseout 이벤트를 등록하고 이벤트가 발생하면 폴리곤의 채움색을 원래색으로 변경합니다
-            // 커스텀 오버레이를 지도에서 제거합니다 
-            kakao.maps.event.addListener(polygon, 'mouseout', function () {
-                polygon.setOptions({ fillColor: '#fff' });
-                customOverlay.setMap(null);
-            });
-
-            // 다각형에 click 이벤트를 등록하고 이벤트가 발생하면 다각형의 이름과 면적을 인포윈도우에 표시합니다 
-            kakao.maps.event.addListener(polygon, 'click', function (mouseEvent) {
-                var content = '<div class="info">' +
-                    '   <div class="title">' + area.name + '</div>' +
-                    '   <div class="size">총 면적 : 약 ' + Math.floor(polygon.getArea()) + ' m<sup>2</sup></area>' +
-                    '</div>';
-
-                infowindow.setContent(content);
-                infowindow.setPosition(mouseEvent.latLng);
-                infowindow.setMap(map);
-            });
+        function getArea(gu_id){
+            $.get({
+                url : '/getarea'
+            })
         }
-        */
-    </script>
+        //  이거 보고 수정 
+
+    //         var areas = []
+    //         // 지도에 영역데이터를 폴리곤으로 표시합니다 
+    //         for (var i = 0, len = areas.length; i < len; i++) {
+    //             displayArea(areas[i]);
+    //         }
+
+    //         // 다각형을 생상하고 이벤트를 등록하는 함수입니다
+    //         function displayArea(area) {
+
+    //         // 다각형을 생성합니다 
+    //         var polygon = new kakao.maps.Polygon({
+    //             map: map, // 다각형을 표시할 지도 객체
+    //             path: area.path,
+    //             strokeWeight: 2,
+    //             strokeColor: '#004c80',
+    //             strokeOpacity: 0.8,
+    //             fillColor: '#fff',
+    //             fillOpacity: 0.7
+    //         });
+
+    //         // 다각형에 mouseover 이벤트를 등록하고 이벤트가 발생하면 폴리곤의 채움색을 변경합니다 
+    //         // 지역명을 표시하는 커스텀오버레이를 지도위에 표시합니다
+    //         kakao.maps.event.addListener(polygon, 'mouseover', function (mouseEvent) {
+    //             polygon.setOptions({ fillColor: '#09f' });
+
+    //             customOverlay.setContent('<div class="area">' + area.name + '</div>');
+
+    //             customOverlay.setPosition(mouseEvent.latLng);
+    //             customOverlay.setMap(map);
+    //         });
+
+    //         // 다각형에 mousemove 이벤트를 등록하고 이벤트가 발생하면 커스텀 오버레이의 위치를 변경합니다 
+    //         kakao.maps.event.addListener(polygon, 'mousemove', function (mouseEvent) {
+
+    //             customOverlay.setPosition(mouseEvent.latLng);
+    //         });
+
+    //         // 다각형에 mouseout 이벤트를 등록하고 이벤트가 발생하면 폴리곤의 채움색을 원래색으로 변경합니다
+    //         // 커스텀 오버레이를 지도에서 제거합니다 
+    //         kakao.maps.event.addListener(polygon, 'mouseout', function () {
+    //             polygon.setOptions({ fillColor: '#fff' });
+    //             customOverlay.setMap(null);
+    //         });
+
+    //         // 다각형에 click 이벤트를 등록하고 이벤트가 발생하면 다각형의 이름과 면적을 인포윈도우에 표시합니다 
+    //         kakao.maps.event.addListener(polygon, 'click', function (mouseEvent) {
+    //             var content = '<div class="info">' +
+    //                 '   <div class="title">' + area.name + '</div>' +
+    //                 '   <div class="size">총 면적 : 약 ' + Math.floor(polygon.getArea()) + ' m<sup>2</sup></area>' +
+    //                 '</div>';
+
+    //             infowindow.setContent(content);
+    //             infowindow.setPosition(mouseEvent.latLng);
+    //             infowindow.setMap(map);
+    //         });
+    //     }
+    
+    // </script>
     </fieldset>
 </div>
 
